Traning section mobile version fix-up

--- a/src/style.scss
+++ b/src/style.scss
@@ -185,7 +185,7 @@ body{
                     position: absolute;
                     content: '';
                     top: 2px;
-                    bottom: 2px;
+                    height: 10px;
                     left: 0;
                     width: 25px;
                     background-color: $mint;
@@ -230,6 +230,8 @@ body{
     }
 
     .card {
+        height: 100%;
+
         .card-title {
             background-color: $dark-blue;
             color: white;
@@ -245,7 +247,6 @@ body{
             padding: 15px;
             font-size: 14px;
             font-weight: 500;
-            min-height: 250px;
         }
     }
 }
